@@ -1,3 +1,9 @@
+2002-03-09  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03095] Re: gopher broken 
+		(Re: Bug#137287: w3m: segfault on gopher://xxxx.xxx URI)
+	* file.c (loadGopherDir): html_quote(url_quote_conv())
+
 2002-03-09  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 03092] Reload image
@@ -3095,4 +3101,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.339 2002/03/08 16:02:51 ukai Exp $
+$Id: ChangeLog,v 1.340 2002/03/08 16:58:12 ukai Exp $
